# rockmail

./: CLAUDE.md  COMPATIBILITY.md  COPYRIGHT  Cargo.toml  ENHANCEMENTS.md  LICENSE  LICENSE-BSD  README.md  build.rs  deny.toml
.github/workflows/: rust.yml
issues/: FORMAT.md  all-git-hash.md  cli-no-f-dash-refresh.md  config-action-thin-tests.md  config-condition-thin-tests.md  config-dump-thin-tests.md  config-lockfile-edge-cases.md  config-no-action-expansion-tests.md  config-no-inline-comments.md  config-pipe-capture-edge-cases.md  delivery-dir-double-newline.md  delivery-dir-is-maildir.md  delivery-error-no-context.md  delivery-maildir-no-retry.md  delivery-maildir-test-race.md  delivery-mh-blank-line-bug.md  delivery-no-comsat.md  delivery-no-error-recovery-tests.md  delivery-no-mbox-truncation.md  delivery-no-nfs-atime-hack.md  delivery-no-permission-tests.md  delivery-no-permission-update.md  delivery-no-secondary-folders.md  engine-dead-state-score.md  engine-eval-variable-unnecessary-clone.md  engine-expand-clones-env-every-call.md  engine-header-ops-rebuild-message-each-time.md  engine-no-child-timeout.md  engine-no-global-lockfile.md  engine-no-last-score-tests.md  engine-no-lock-timeout.md  engine-no-logabstract.md  engine-no-rfc2047-cache.md  engine-no-signal-handling.md  engine-no-trap.md  engine-no-weighted-tests.md  engine-regex-recompiled-per-condition.md  engine-run-backtick-ignored-errors.md  engine-shellflags-unwrap.md  engine-short-circuit-scoring.md  (+95 more)
issues/wontfix/: testing-delivery-error-paths.md  testing-engine-forward-action.md  testing-gold-timing-vars.md
proptest-regressions/rfc2047/: tests.txt
scripts/: count-lines.sh  count-tests  fast-tests  save-regression
src/: dedup.rs  field.rs  formail.rs  lib.rs
src/config/: action.rs  condition.rs  dump.rs  mod.rs  parser.rs  recipe.rs
src/dedup/: tests.rs
src/delivery/: maildir.rs  mbox.rs  mh.rs  mod.rs  pipe.rs  tests.rs
src/engine/: mod.rs  tests.rs
tests/: corpmail.rs  corpmail_gold.rs  formail.rs  formail_gold.rs  regressions.rs  replay  replay-regression  rockmail.rs  rockmail_gold.rs  rockmail_proptest.proptest-regressions  rockmail_proptest.rs  umask.rs
(+61 files in other folders)
