[package]
name = "corpmail"
version = "0.1.0"
edition = "2024"
description = "Rust translation of procmail (mail filtering and delivery)"
license = "GPL-2.0-only"
keywords = ["email", "mail", "filter", "procmail"]
categories = ["email", "command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
filetime = "0.2"
nix = { version = "0.29", features = ["user", "fs", "process", "signal", "hostname"] }
regex = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[features]
gold = []
nfs = []

[[bin]]
name = "lockfile"
required-features = ["nfs"]

[dev-dependencies]
tempfile = "3"
