[package]
name = "rockmail"
version = "0.1.0"
edition = "2024"
description = "Rust translation of procmail (mail filtering and delivery)"
license = "GPL-2.0-only"
keywords = ["email", "mail", "filter", "procmail"]
categories = ["email", "command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
filetime = "0.2"
linker-set = "0.5.4"
nix = { version = "0.29", features = ["user", "fs", "process", "signal", "hostname"] }
pastey = "0.2.1"
regex = "1"
thiserror = "1"

[features]
gold = []
nfs = []

[[bin]]
name = "lockfile"
required-features = ["nfs"]

[dev-dependencies]
flate2 = "1"
libtest-mimic = "0.8"
proptest = "1"
rand = "0.8"
tar = "0.4"
tempfile = "3"

[[test]]
name = "regressions"
harness = false
